successfully plotting all flights on global map

--- a/app/css/all.scss
+++ b/app/css/all.scss
@@ -2,6 +2,9 @@
 // Normalize default styles and browser inconsistencies. see https://necolas.github.io/normalize.css/
 @import "normalize";
 
+// Vendor
+@import "leaflet";
+
 // Import Bourbon, Neat & Bitters
 @import "bourbon";
 @import "grid-settings";
@@ -9,3 +12,4 @@
 @import "base/base";
 
 // Import site specific CSS
+@import "app/all";
